--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: RT Hamburger
 Text Domain: rt-hamburger
-Theme URI: https://rt-hamburger.com/
+Theme URI: https://github.com/ko-haru-58/WP-Theme-Study
 Author: haru
 Author URI: https://x.com/ko_haru_58
 Description:【RaiseTech WordPress副業コース課題】FLOCSSによるコーディング／WordPressのテーマ作成
